Add enpoint to get the log of a service of a stack
