# lib/httpServer/index.js
@@ -95,7 +95,7 @@ class HTTPServer {
             const stacks = await dockerService.getStacks(req.user);
 
             res.status(200).json(projection.stacks(stacks));
-        });
+        });        
 
         this.app.post('/stacks', authService.createMiddleware(), apiLimiter, async (req, res) => {
             if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
@@ -150,6 +150,23 @@ class HTTPServer {
             if (!stackDeleted) throw new HTTPError(404, `Stack '${stackName}' not found for user '${req.user.name}'.`);
 
             res.status(200).json(projection.stackDeletionResult(stackDeleted));
+        });
+
+        this.app.get('/stacks/:stackName/services/:serviceID/logs', authService.createMiddleware(), apiLimiter, async (req, res) => {
+            if (req.headers['accept'] && !req.headers['accept'].includes('application/json')) throw new HTTPError(400, 'Accept content not supported');
+
+            const stackName = req.params.stackName;
+            const serviceID = req.params.serviceID;
+
+
+            if (stackName == null) throw new HTTPError(400, 'The stackName parameter must be a string');
+            if (serviceID == null) throw new HTTPError(400, 'The serviceID parameter must be a string');
+
+            const logs = await dockerService.getLogsFromServiceFromStack(req.user, stackName, serviceID, req.query.tail);
+
+            if (!logs) throw new HTTPError(404, `Stack '${stackName}' or service '${serviceID}' not found for user '${req.user.name}'.`);
+
+            res.status(200).json(logs);
         });
 
         this.app.get('/templates/stacks', authService.createMiddleware(), apiLimiter, async (req, res) => {
